# CRank-Consistency_based_ranking

./: .gitignore  README.md  environment.yaml  meta_config.yaml  pyproject.toml
data/: README.md
data/BBBC039/: train.txt
data/FlyWing/: test.txt  train.txt  val.txt
data/Go-Nuclear/: train.txt
data/HeLaNuc/: test.txt  train.txt  val.txt
data/Hoechst/: dev.txt  test.txt  train.txt
data/Ovules/: test.txt  train.txt  val.txt
data/PNAS/: test.txt  train.txt  val.txt
data/S-BIAD1196/: test.txt  train.txt  val.txt
data/S-BIAD1410/: test.txt  train.txt
data/S-BIAD634/: train.txt
data/S-BIAD895/: test.txt  train.txt
data/helper_scripts/: convert_to_binary_labels.py  pixel_resize.py  split_data.py  write_filenames_no_ext.py
datasets/: README.md
datasets/BBBC039/: test.txt  val.txt
datasets/S-BIAD634/: test.txt
examples/example_batch_run/: meta_config.yaml  meta_config_exp_batch_prediction_evaluate.yaml
examples/example_batch_run/output_structure/BBBC039_to_BBBC039_gap/feature_perturbation_consistency/example_run/BC_IN_model/norm_50_980/DO_a01/: DO_a01.yml
examples/meta_configs/: meta_config_(batch_prediction_evaluate).yaml  meta_config_batch_evaluate.yaml  meta_config_batch_full.yaml
meta_configs/: meta_config_(batch_consistency).yaml  meta_config_(batch_prediction_evaluate).yaml
notebooks/: Multitarget_correlation_plot.ipynb  correlation_statistics.ipynb  multi_perturbation_strength_plot.ipynb
scripts/: batch_consistency.py  batch_performance.py  batch_prediction_evaluate.py  batch_summary_metric.py  generate_config_yamls.py  single_eval_consis.py
src/model_ranking/: consistency.py  correlation.py  dataclass.py  datasets.py  evaluation.py  metrics.py  plots.py  pseudo_labeling.py  results.py  utils.py  yaml_generators.py
(+11 files in other folders)
